src/components/home/Home.css
.Home {
    margin: 100px;
}

.Home-Content {
    margin-top: 60px;

    display: grid;
    grid-template-columns: 400px 332px;
    column-gap: 232px;

    font-size: var(--text-font-size);
    line-height: var(--text-line-height);
}

.Home-Greeting {
    margin: 0;

    font-weight: bold;
    font-size: var(--h1-font-size);
    line-height: var(--h1-line-height);
}

.Home-Photo {
    display: flex;
    width: 100%;
}

.Home-Photo_size_cropped {
    display: none;
}

.Home-About {
    margin: 24px 0 0;

    white-space: pre-line;
}

.Home-About p {
    margin: 0;
}

.Home-About p + p {
    margin: 12px 0 0;
}

.Home .BlogPreview {
    margin-top: 40px;
}

.Home-Projects,
.Home-Links {
    margin-top: 40px;

    display: flex;
    flex-direction: column;
}

.Home-ProjectsHeader {
    display: none;

    margin: 0;

    font-size: var(--h2-font-size);
    line-height: var(--h2-line-height);
}

.Home-Project + .Home-Project {
    margin-top: 20px;
}

.Home-Project_past + .Home-Project_past {
    margin-top: 8px;
}

.Home-ProjectHeader {
    margin: 0;

    font-size: var(--text-font-size);
    line-height: var(--text-line-height);
}

.Home-Project_past .Home-ProjectHeader {
    font-weight: normal;

    color: var(--inactive-color);
}

.Home-Project_past .Home-ProjectName {
    color: var(--inactive-color);
}

.Home-ProjectDescription {
    margin: 4px 0 0;
}

.Home-ProjectPeriod {
    color: var(--inactive-color);
}

.Home-ProjectPeriod::before {
    content: ' ';
}

.Home-Link {
    width: max-content;
}

.Home-Link + .Home-Link {
    margin-top: 12px;
}

.Home-LinkUsername {
    visibility: hidden;

    color: var(--inactive-color);
}

.Home-LinkUsername::before {
    content: '  ';
    white-space: pre-wrap;
}

.Home-Link:hover .Home-LinkUsername {
    visibility: visible;
}

.Home-FooterNote {
    grid-column: 1 / -1;

    margin-top: 300px;

    color: var(--inactive-color);
}

@media (hover: none) {
    .Home-LinkUsername {
        visibility: visible;
    }
}

@media (max-width: 1200px) {
    .Home {
        margin: 60px;
    }

    .Home-Content {
        grid-template-columns: 360px 332px;
        column-gap: 140px;
    }
}

@media (max-width: 960px) {
    .Home {
        margin: 60px;
    }

    .Home-Content {
        grid-template-columns: 400px;
        grid-auto-rows: auto;
        row-gap: 40px;
    }

    .Home-Photo_size_full {
        display: none;
    }

    .Home-Photo_size_cropped {
        display: block;
    }

    .Home-Photo_size_cropped,
    .Home-About,
    .Home-Projects {
        margin-top: 20px;
    }

    .Home-Projects {
        margin-top: 0;
    }

    .Home-ProjectsHeader {
        display: block;

        margin-bottom: 20px;
    }

    .Home-Links {
        margin-top: 40px;
    }
}

@media (max-width: 540px) {
    .Home {
        margin: 60px 20px;
    }

    .Home-Content {
        grid-template-columns: auto;
    }
}

